--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "bootstrap": "^4.1.1",
     "font-awesome": "^4.7.0",
     "lodash": "^4.17.10",
-    "prop-types": "^15.6.2"
+    "prop-types": "^15.6.2",
+    "react-router-dom": "^5.1.2"
   }
 }
