--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     ]
   },
   "devDependencies": {
+    "axios": "^0.19.2",
     "bootstrap": "^4.1.1",
     "font-awesome": "^4.7.0",
     "joi-browser": "^13.4.0",
