--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "joi-browser": "^13.4.0",
     "lodash": "^4.17.10",
     "prop-types": "^15.6.2",
-    "react-router-dom": "^5.1.2"
+    "react-router-dom": "^5.1.2",
+    "react-toastify": "^4.1.0"
   }
 }
