--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "lodash": "^4.17.10",
     "prop-types": "^15.6.2",
     "react-router-dom": "^5.1.2",
-    "react-toastify": "^4.1.0"
+    "react-toastify": "^4.1.0",
+    "serve": "^11.3.0"
   }
 }
